# lazyime.nvim

./: .editerconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
lua/lazyime/: core.lua  init.lua
lua/lazyime/core/: core.lua  tasks.lua
lua/lazyime/tools/: iolib.lua  log.lua  network.lua  pathlib.lua  request.lua  response.lua  time.lua
plugin/: init.lua
src/: main.rs
src/core/: lib.rs
src/focus/: mod.rs
src/focus/windows/: focus.rs  mod.rs
src/memory/: mod.rs
src/parser/: mod.rs
src/parser/language/: mod.rs  rust.rs
src/rpc/: mod.rs  request.rs  response.rs  socket.rs
src/static/TreeSitterQuery/: rust.scm
src/switch/: mod.rs
src/switch/windows/: focus.rs  mod.rs  switch.rs
