[package]
name = "lazyime"
version = "0.1.0"
edition = "2024"

[dependencies.windows]
version = "0.62.2"
features = ["Win32_UI_TextServices", "Win32_System_Com", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_Ime"]


[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
